k8s/app/admin-ui-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: admin-ui
spec:
  replicas: 1
  selector:
    matchLabels:
      app: admin-ui
  template:
    metadata:
      labels:
        app: admin-ui
    spec:
      containers:
      - name: admin-ui
        image: admin-ui:latest
        imagePullPolicy: Always
        ports:
        - containerPort: 80
