k8s/app/admin-ui-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: admin-ui
spec:
  selector:
    app: admin-ui
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
